packages/preview/sprintf/0.1.0/.nim_runtime/tests/errmsgs/tkeywordparam.nim
discard """
errormsg: "'type' is a keyword and cannot be used as a parameter name"
"""

proc myproc(type: int) =
  echo type
